--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			   				<div class="slider-text-inner">
 			   					<div class="desc">
 			   						<span>Sep. 07, 2019</span>
-			   						<h2>Create A Motivational Template</h2>
+			   						<h2>Create A Motivational Project</h2>
 			   						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 			   					</div>
 			   				</div>
