--- a/index.html
+++ b/index.html
@@ -260,28 +260,28 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4 text-center animate-box fadeInUp animated">
-						<div class="work" style="background-image: url(images/imgs-1.jpg);">
+						<div class="work" style="background-image: url(images/imgs-1.JPG);">
 							<a href="#" class="view">
 								<span>Contemporary Art Website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-8 text-center animate-box fadeInUp animated">
-						<div class="work" style="background-image: url(images/imgs-2.jpg);">
+						<div class="work" style="background-image: url(images/imgs-2.JPG);">
 							<a href="#" class="view">
 								<span>Museums website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-7 text-center animate-box fadeInUp animated">
-						<div class="work" style="background-image: url(images/imgs-3.jpg);">
+						<div class="work" style="background-image: url(images/imgs-3.JPG);">
 							<a href="#" class="view">
 								<span>Transport website</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-5 text-center animate-box fadeInUp animated">
-						<div class="work" style="background-image: url(images/imgs-4.jpg);">
+						<div class="work" style="background-image: url(images/imgs-4.JPG);">
 							<a href="#" class="view">
 								<span>Architecture website</span>
 							</a>
