--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 						<div class="fh5co-staff">
 							<img class="img-responsive" src="images/user-3.jpg" alt="Free HTML5 Templates by freeHTML5.co">
 							<h3>Alex King</h3>
-							<strong class="role">Web Developer</strong>
+							<strong class="role">Administrator</strong>
 							<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat</p>
 							<ul class="fh5co-social-icons">
 								<li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -197,7 +197,7 @@
 						<div class="fh5co-staff">
 							<img class="img-responsive" src="images/user-4.jpg" alt="Free HTML5 Templates by freeHTML5.co">
 							<h3>Hush Raven</h3>
-							<strong class="role">Web Designer</strong>
+							<strong class="role">Designer</strong>
 							<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat</p>
 							<ul class="fh5co-social-icons">
 								<li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -222,7 +222,7 @@
 							<a href="#"><img class="img-responsive" src="images/img-1.jpg" alt=""></a>
 							<div class="blog-text">
 								<span class="posted_on">Sep. 7th</span>
-								<h3><a href="#">Designed for website success</a></h3>
+								<h3><a href="#">Designe and nature</a></h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div> 
 						</div>
@@ -232,7 +232,7 @@
 							<a href="#"><img class="img-responsive" src="images/img-2.jpg" alt=""></a>
 							<div class="blog-text">
 								<span class="posted_on">jul. 15th</span>								
-								<h3><a href="#">Hard work for developers</a></h3>
+								<h3><a href="#">Hard work</a></h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div> 
 						</div>
@@ -262,28 +262,28 @@
 					<div class="col-md-4 text-center animate-box fadeInUp animated">
 						<div class="work" style="background-image: url(images/imgs-1.JPG);">
 							<a href="#" class="view">
-								<span>Contemporary Art Website</span>
+								<span>Contemporary Art</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-8 text-center animate-box fadeInUp animated">
 						<div class="work" style="background-image: url(images/imgs-2.JPG);">
 							<a href="#" class="view">
-								<span>Museums website</span>
+								<span>Museums</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-7 text-center animate-box fadeInUp animated">
 						<div class="work" style="background-image: url(images/imgs-3.JPG);">
 							<a href="#" class="view">
-								<span>Transport website</span>
+								<span>Transport</span>
 							</a>
 						</div>
 					</div>
 					<div class="col-md-5 text-center animate-box fadeInUp animated">
 						<div class="work" style="background-image: url(images/imgs-4.JPG);">
 							<a href="#" class="view">
-								<span>Architecture website</span>
+								<span>Architecture</span>
 							</a>
 						</div>
 					</div>
