--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div class="fh5co-navbar-brand">
 					<div class="row">
 						<div class="col-xs-6">
-							<h1 class="text-left"><a class="fh5co-logo" href="index.html"><span>Blog</span> Words <span>WordPress Theme</span></a></h1>
+							<h1 class="text-left"><a class="fh5co-logo" href="index.html"><span>Blog</span> Words <span>Theme</span></a></h1>
 						</div>
 						<div class="col-xs-6">
 							<p class="fh5co-social-icon text-right">
@@ -74,7 +74,7 @@
 				<aside id="fh5co-hero" class="js-fullheight" style="height: 674px;">
 			<div class="flexslider js-fullheight" style="height: 674px;">
 				<ul class="slides">
-			   	<li style="background-image: url(&quot;images/slide_1.jpg&quot;); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; height: 674px;" class="flex-active-slide" data-thumb-alt="">
+			   	<li style="background-image: url(&quot;images/slide_1.JPG&quot;); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 1; display: block; z-index: 2; height: 674px;" class="flex-active-slide" data-thumb-alt="">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text animated fadeInUp" style="height: 674px;">
@@ -88,7 +88,7 @@
 			   			</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(&quot;images/slide_2.jpg&quot;); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1; height: 674px;" data-thumb-alt="" class="">
+			   	<li style="background-image: url(&quot;images/slide_2.JPG&quot;); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1; height: 674px;"  data-thumb-alt="" class="">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text" style="height: 674px;">
@@ -103,7 +103,7 @@
 			   			</div>
 			   		</div>
 			   	</li>
-			   	<li style="background-image: url(&quot;images/slide_3.jpg&quot;); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1; height: 674px;" data-thumb-alt="" class="">
+			   	<li style="background-image: url(&quot;images/slide_3.JPG&quot;); width: 100%; float: left; margin-right: -100%; position: relative; opacity: 0; display: block; z-index: 1; height: 674px;" data-thumb-alt="" class="">
 			   		<div class="overlay-gradient"></div>
 			   		<div class="container">
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text" style="height: 674px;">
@@ -242,7 +242,7 @@
 							<a href="#"><img class="img-responsive" src="images/img-3.jpg" alt=""></a>
 							<div class="blog-text">
 								<span class="posted_on">jun. 15th</span>								
-								<h3><a href="#">Inspirational Website 2019</a></h3>
+								<h3><a href="#">Inspirational life</a></h3>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 							</div> 
 						</div>
@@ -368,3 +368,4 @@
 		</footer>
 	</div>
 </body>
+</html>
