--- a/index.html
+++ b/index.html
@@ -346,7 +346,12 @@
 									<div class="col-md-12 col-md-offset-0">
 										<div class="form-group">
 											<input type="text" class="form-control" id="email" placeholder="Enter your email">
-											<button type="submit" class="btn btn-default"><i class="icon-paper-plane"></i></button>
+											<button type="submit" class="btn btn-default"><i class="icon-paper-plane"></i></button></div>
+											<div class="row">
+									<div class="col-md-12 col-md-offset-0">
+										<div class="form-group">
+											<input type="text" class="form-control" id="number" placeholder="Enter your number">
+											<button type="submit" class="btn btn-default"><i class="icon-paper-plane"></i></button></div>
 										</div>
 									</div>
 								</div>
