--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="projects">
 	<meta name="keywords" content="project, web, designer, blog">
-	
+
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
@@ -25,6 +25,7 @@
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
 	<link rel="stylesheet" href="css/style.css">
+
 	
 	</head>
 	<body>
@@ -34,18 +35,12 @@
 			<div class="fh5co-table-cell js-fullheight" style="height: 674px;">
 				<h1 class="text-center"><a class="fh5co-logo" href="index.html">Words</a></h1>
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="work.html">Work</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Work</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
-				<p class="fh5co-social-icon">
-					
-					<a href="#"><i class="icon-facebook2"></i></a>
-					<a href="#"><i class="icon-instagram"></i></a>
-					<a href="#"><i class="icon-youtube"></i></a>
-				</p>
 			</div>
 		</div>
 	</nav>
@@ -56,7 +51,7 @@
 				<div class="fh5co-navbar-brand">
 					<div class="row">
 						<div class="col-xs-6">
-							<h1 class="text-left"><a class="fh5co-logo" href="index.html"><span>Blog</span> Words <span>Theme</span></a></h1>
+							<h1 class="text-left"><a class="fh5co-logo" href="index.html"> Words <span>Think Different</span></a></h1>
 						</div>
 						<div class="col-xs-6">
 							<p class="fh5co-social-icon text-right">
@@ -68,6 +63,7 @@
 						</div>
 					</div>
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+				
 				</div>
 			</div>
 		</header>
