--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<meta name="description" content="projects">
 	<meta name="keywords" content="project, web, designer, blog">
 
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="shortcut icon" href="favicon.ico">
+
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
@@ -25,6 +28,12 @@
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
 	<link rel="stylesheet" href="css/style.css">
+	<!-- Modernizr JS -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
 
 	
 	</head>
@@ -35,11 +44,10 @@
 			<div class="fh5co-table-cell js-fullheight" style="height: 674px;">
 				<h1 class="text-center"><a class="fh5co-logo" href="index.html">Words</a></h1>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Work</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="about.html">Blog</a></li>
+					<li><a href="work.html">Work</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -287,7 +295,7 @@
 			</div>
 		</div>
 
-		<div class="fh5co-counters animated" style="background-image: url(images/hero.jpg);" data-stellar-background-ratio="0.5" id="counter-animate">
+		<!-- <div class="fh5co-counters animated" style="background-image: url(images/hero.jpg);" data-stellar-background-ratio="0.5" id="counter-animate">
 			<div class="fh5co-narrow-content animate-box fadeInUp animated">
 				<div class="row">
 					<div class="col-md-4 text-center">
@@ -304,7 +312,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 		<footer>
 			<div id="footer">
 				<div class="container">
@@ -368,5 +376,20 @@
 			</div>
 		</footer>
 	</div>
+	<!-- jQuery -->
+	<script src="js/jquery.min.js"></script>
+	<!-- jQuery Easing -->
+	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- Bootstrap -->
+	<script src="js/bootstrap.min.js"></script>
+	<!-- Waypoints -->
+	<script src="js/jquery.waypoints.min.js"></script>
+	<!-- Counters -->
+	<script src="js/jquery.countTo.js"></script>
+	<!-- Flexslider -->
+	<script src="js/jquery.flexslider-min.js"></script>
+
+	<!-- Main JS (Do not remove) -->
+	<script src="js/main.js"></script>
 </body>
 </html>
