--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text" style="height: 674px;">
 			   				<div class="slider-text-inner">
 			   					<div class="desc">
-			   						<span>Jan. 06, 2016</span>
-				   					<h2>Inspirational Website Of Year 2017</h2>
+			   						<span>Jan. 06, 2019</span>
+				   					<h2>Inspirational Website Of Year 2019</h2>
 				   					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 				   				</div>
 			   				</div>
@@ -318,18 +318,17 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-3">
-							<h3 class="section-title">About Words</h3>
+							<h3 class="section-title">About</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
 						</div>
 						
 						<div class="col-md-3 col-md-push-1">
 							<h3 class="section-title">Links</h3>
 							<ul>
-								<li><a href="#">Home</a></li>
-								<li><a href="#">Work</a></li>
 								<li><a href="#">About</a></li>
 								<li><a href="#">Blog</a></li>
-								<li><a href="#">FAQ / Contact</a></li>
+								<li><a href="#">Work</a></li>
+								<li><a href="#">Contact</a></li>
 							</ul>
 						</div>
 
@@ -337,9 +336,7 @@
 							<h3 class="section-title">Information</h3>
 							<ul>
 								<li><a href="#">Terms &amp; Condition</a></li>
-								<li><a href="#">License</a></li>
 								<li><a href="#">Privacy &amp; Policy</a></li>
-								<li><a href="#">Contact Us</a></li>
 							</ul>
 						</div>
 						<div class="col-md-3">
